# Agent2Agent

./: README.md  sitemap.xml
.github/workflows/: spelling.yaml
samples/python/agents/: README.md
samples/python/agents/a2a_mcp_connector/: ARCHITECTURE.md  CHANGELOG.md  IMPROVEMENTS.md  README.md  __init__.py  __main__.py  agent.py  agent.py.fixed  base_agent.py  implementation_details.md  jsonrpc_utils.py  mcp_connection_manager.py  mock_mcp_server.py  pyproject.toml  task_manager.py  test_e2e.py  test_jsonrpc.py  validate_mcp_jsonrpc.py
samples/python/agents/a2a_mcp_connector/a2a_mcp_connector/: __init__.py  agent.py
samples/python/agents/mindsdb/: README.md
samples/python/common/server/: server.py
